# ai-backend

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
microservices/event-listener/: main.py  requirements.txt  utils.py
microservices/stable-diffusion/: Dockerfile  ipfs.py  main.py  model.py  requirements.txt  utils.py
simple-frontend/: .env  Dockerfile  main.py  requirements.txt
